# badgemagic-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
demo/: effects.toml  jump.toml  smiley.toml
examples/: hello-world.rs
src/: ble.rs  lib.rs  main.rs  protocol.rs  usb_hid.rs  util.rs
ui/src-tauri/src/: lib.rs
