[package]
name = "badgemagic"
version = "0.1.0"
authors = ["Martin Michaelis <code@mgjm.de>"]
edition = "2021"
description = "Badge Magic with LEDs - Library and CLI"
homepage = "https://badgemagic.fossasia.org"
repository = "https://github.com/fossasia/badgemagic-rs"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "badgemagic"
required-features = ["cli"]

[[example]]
name = "hello-world"
required-features = ["embedded-graphics", "usb-hid"]

[features]
default = ["embedded-graphics", "usb-hid"]

cli = [
  "embedded-graphics",
  "serde",
  "usb-hid",
  "ble",
  "dep:base64",
  "dep:clap",
  "dep:serde_json",
  "dep:toml",
]

embedded-graphics = ["dep:embedded-graphics"]
serde = ["dep:serde"]
usb-hid = ["dep:hidapi"]
ble = ["dep:btleplug", "dep:uuid", "dep:tokio"]

[dependencies]
anyhow = "1.0.98"
base64 = { version = "0.22.1", optional = true }
clap = { version = "4.5.44", features = ["derive"], optional = true }
embedded-graphics = { version = "0.8.1", optional = true }
hidapi = { version = "2.6.3", optional = true }
btleplug = { version = "0.11.8", optional = true }
uuid = { version = "1.18.0", optional = true }
tokio = { version = "1.47.1", features = ["rt"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.142", optional = true }
time = "0.3.41"
toml = { version = "0.9.5", optional = true }
zerocopy = { version = "0.8.26", features = ["derive"] }
