[package]
name = "badgemagic"
version = "0.1.0"
authors = ["Martin Michaelis <code@mgjm.de>"]
edition = "2021"
description = "Badge Magic with LEDs - Library and CLI"
homepage = "https://badgemagic.fossasia.org"
repository = "https://github.com/fossasia/badgemagic-rs"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "badgemagic"
required-features = ["cli"]

[[example]]
name = "hello-world"
required-features = ["embedded-graphics", "usb-hid"]

[features]
default = ["embedded-graphics", "usb-hid"]

cli = [
  "embedded-graphics",
  "serde",
  "usb-hid",
  "ble",
  "dep:base64",
  "dep:clap",
  "dep:serde_json",
  "dep:toml",
]

embedded-graphics = ["dep:embedded-graphics"]
serde = ["dep:serde"]
usb-hid = ["dep:hidapi"]
ble = ["dep:btleplug", "dep:uuid", "dep:tokio"]

[dependencies]
anyhow = "1.0.98"
base64 = { version = "0.22.1", optional = true }
clap = { version = "4.5.54", features = ["derive"], optional = true }
embedded-graphics = { version = "0.8.1", optional = true }
hidapi = { version = "2.6.3", optional = true }
btleplug = { version = "0.11.8", optional = true }
uuid = { version = "1.11.0", optional = true }
tokio = { version = "1.49.0", features = ["rt"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
time = "0.3.45"
toml = { version = "0.9.11", optional = true }
zerocopy = { version = "0.8.33", features = ["derive"] }
u8g2-fonts = {  version = "0.7.1", features = ["embedded_graphics_textstyle"] }
image = "0.25.6"
